--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "url": "https://github.com/GnarlyLasagna/js-webcrawler-http/issues"
   },
   "homepage": "https://github.com/GnarlyLasagna/js-webcrawler-http#readme",
-  "dependencies": {
+  "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "jsdom": "^24.0.0"
   }
 }
